	* testsuite/ltrace.torture/signals.c: Don't use magic numbers.
	* testsuite/ltrace.minor/demangle-lib.cpp: Fix build failure.
	* sysdeps/linux-gnu/mksyscallent_mips: New file.
	* elf.c: Fix '-l' on MIPS.
	* debug.h: Add macro guard.
	* breakpoints.c: Fix MIPS breakpoints.

2010-09-30  Zach Welch <zwelch@codesourcery.com>

	* Improve ARM syscall_p to handle Thumb-2 syscalls.

2009-07-25  Juan Cespedes <cespedes@debian.org>

	* New release 0.5.3
	* Created "libltrace.a" and a simple main program that calls it
	* Added support for callbacks to libltrace
	* Got rid of GNU's Autoconf stuff
	* Make it work again in sparc with new kernel headers

2009-05-21  Juan Cespedes <cespedes@debian.org>

	* Release version 0.5.2
	* new fork() and clone() approach:
	  + used PTRACE_O_TRACE{FORK,VFORK,CLONE} to trace newly created
	    processes instead of figuring it out whether a given syscall
	    would create another process or not
	  That way, new processes are always traced from the very beginning
	* Use PTRACE_O_TRACEEXEC to check if a process has called exec()

2009-05-07  Juan Cespedes <cespedes@debian.org>

	* clean-up of structs Process, Breakpoint, Function and Event

2009-04-07  Juan Cespedes <cespedes@debian.org>

	* Improved documentation
	* Cleaning up of "struct options"
	* wait_for_something -> sysdeps/linux/events.c:next_event()
	* wait for new children to stop instead of assuming they have stopped

2009-02-11  Juan Cespedes <cespedes@debian.org>

	* Fixed bug present since the first version (!) of ltrace,
	  which caused many programs to segfault when a signal is received:
	  + When a breakpoint is hit, and we need to continue with it, we:
	    1) remove the breakpoint
	    2) order a SINGLESTEP
	    3) when control comes back, set the breakpoint again
	    4) let the process continue
	  + The problem came when a signal is received in the middle
	    of all this (specifically, between 2) and 3)).
	    If this is so, we treat the signal "in the usual way",