@@ -627,7 +627,7 @@ handle_breakpoint(Event *event) {
 		return;
 	}
 
-	if (event->proc->state != STATE_IGNORED) {
+	if (event->proc->state != STATE_IGNORED && !options.no_plt) {
 		output_line(event->proc, "unexpected breakpoint at %p",
 				(void *)event->e_un.brk_addr);
 	}
